service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/namespaces/istio-system/networking.istio.io/destinationrules/istiod-basic.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.1-1-2"},"labels":{"app":"istiod","app.kubernetes.io/component":"istio-discovery","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"istio-discovery","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.1-1-2","istio":"pilot","istio.io/rev":"basic","maistra-version":"2.1.6" [...]
    maistra.io/mesh-generation: 2.3.1-1-2
  creationTimestamp: "2023-03-03T20:02:59Z"
  generation: 1
  labels:
    app: istiod
    app.kubernetes.io/component: istio-discovery
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: istio-discovery
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.1-1-2
    istio: pilot
    istio.io/rev: basic
    maistra-version: 2.1.6
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: istiod-basic
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: 0c79eb74-854c-4f98-85c6-5955e78fd93e
  resourceVersion: "34487"
  uid: ce840b48-0696-4054-8296-beafdf5ae7b6
spec:
  host: istiod-basic.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 8188
      tls:
        mode: SIMPLE
