service_mesh/must-gather-istio/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-35844d0317a98a0d0c8b344f25a92d68d4624387f2dfe3cf23888584c24d5986/namespaces/istio-system/networking.istio.io/destinationrules/wasm-cacher-basic.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{"maistra.io/mesh-generation":"2.3.1-1-2"},"labels":{"app":"wasm-cacher","app.kubernetes.io/component":"wasm-extensions","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"wasm-extensions","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.3.1-1-2","heritage":"Tiller","istio.io/rev":"basic","maistra-version [...]
    maistra.io/mesh-generation: 2.3.1-1-2
  creationTimestamp: "2023-03-03T20:03:50Z"
  generation: 1
  labels:
    app: wasm-cacher
    app.kubernetes.io/component: wasm-extensions
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: wasm-extensions
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.3.1-1-2
    heritage: Tiller
    istio.io/rev: basic
    maistra-version: 2.1.6
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  name: wasm-cacher-basic
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: 0c79eb74-854c-4f98-85c6-5955e78fd93e
  resourceVersion: "35353"
  uid: 35a587cd-7331-429e-b225-56408ba73305
spec:
  host: wasm-cacher-basic.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
